--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -167,7 +167,7 @@ for_window [instance="^floating xterm$"] floating enable
 for_window [title="^Android Emulator - "] floating enable
 
 # Enable floating mode and add a border to the Firefox about dialog.
-for_window [class="^Firefox$" window_role="^About$"] floating enable, border pixel 1
+for_window [class="^firefox$" window_role="^About$"] floating enable, border pixel 1
 for_window [class="^firefoxdeveloperedition$" window_role="^About$"] floating enable, border pixel 1
 
 # Use a sticky scratchpad window for Newsboat.
