Try Romain Lafourcade's vim-qf plugin
I am also trying out Vim's new built-in plugin loading feature for this
one (see `:h packages`).  All I had to do was add a Git submodule at the
right path, restart Vim, and run `:helptags ALL`.

https://github.com/romainl/vim-qf
https://shapeshed.com/vim-packages/
https://vi.stackexchange.com/q/9522

--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "misc/AUR/recutils"]
 	path = misc/AUR/recutils
 	url = https://aur.archlinux.org/recutils.git
+[submodule "home/vim/pack/meribold/start/vim-qf"]
+	path = home/vim/pack/meribold/start/vim-qf
+	url = https://github.com/romainl/vim-qf.git
