Use James McCoy's vim-gnupg plugin
I've actually been using this plugin for a while, but never committed
the `Plug 'jamessan/vim-gnupg'` line I had in `common.vim`.

--- a/.gitmodules
+++ b/.gitmodules
@@ -322,3 +322,6 @@
 [submodule "home/vim/pack/meribold/start/wombat256.vim"]
 	path = home/vim/pack/meribold/start/wombat256.vim
 	url = https://github.com/vim-scripts/wombat256.vim.git
+[submodule "home/vim/pack/meribold/start/vim-gnupg"]
+	path = home/vim/pack/meribold/start/vim-gnupg
+	url = https://github.com/jamessan/vim-gnupg
