Swap return and backslash keybinds
I have a new ThinkPad X220 and this one has a US keyboard.  My other
X220 has a German keyboard which means the backslash key is where the
return key should be when using the US keyboard layout.

Swapping the return and backslash keybinds means everything stays more
or less like it was on my other ThinkPad X220.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -11,7 +11,7 @@ set $mod Mod4
 floating_modifier $mod
 
 # Start a terminal.
-bindsym $mod+backslash exec --no-startup-id xterm
+bindsym $mod+Return exec --no-startup-id xterm
 
 # Kill focused window.
 bindsym $mod+q kill
