--- a/misc/i3-gaps-meribold-git/PKGBUILD
+++ b/misc/i3-gaps-meribold-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Lukas Waymann <meribold@gmail.com>
 
 pkgname=i3-gaps-meribold-git
-pkgver=4.16.1.r3.g276cf356
+pkgver=4.16.1.r4.g0f8625a5
 pkgrel=1
 pkgdesc='A slightly patched fork of i3-gaps'
 arch=('i686' 'x86_64')
