Disable sanitizers in PKGBUILD for patched i3-gaps
This is recommended at [1]:

> Disabling sanitizers is important for release versions!

[1]: https://github.com/Airblader/i3/wiki/Building-from-source
[2]: https://wiki.archlinux.org/index.php/PKGBUILD#pkgrel

--- a/misc/i3-gaps-meribold-git/PKGBUILD
+++ b/misc/i3-gaps-meribold-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=i3-gaps-meribold-git
 pkgver=4.16.1.r4.g0f8625a5
-pkgrel=1
+pkgrel=2
 pkgdesc='A slightly patched fork of i3-gaps'
 arch=('i686' 'x86_64')
 url='https://github.com/meribold/i3/tree/meribold'
@@ -32,7 +32,7 @@ prepare(){
 
 build() {
    cd build
-   ../i3/configure --prefix=/usr --sysconfdir=/etc
+   ../i3/configure --prefix=/usr --sysconfdir=/etc --disable-sanitizers
    make
 }
 
