Improve Super+FN keybinds somewhat

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -197,6 +197,10 @@ for_window [instance="^ncmpcpp$"] move scratchpad
 for_window [instance="^ncmpcpp$"] sticky enable
 for_window [instance="^ncmpcpp$"] scratchpad show
 
+for_window [instance="^floating man$"] floating enable
+for_window [instance="^floating man$"] move scratchpad
+for_window [instance="^floating man$"] scratchpad show
+
 # This enhances a keybind defined in `home/xbindkeysrc`.  TODO: set the keybind up here
 # and don't use XBindKeys for this one?
 for_window [class= "^feh$" instance="^feh$" title="^feh \[1 of 1\] - /tmp/qrencode\....\.png$"] floating enable
