Remove unneeded quotes in i3 config

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -108,7 +108,7 @@ mode "resize" {
    bindsym Shift+k move up
    bindsym Shift+l move right
    bindsym Return move position center
-   bindsym Escape mode "default"
+   bindsym Escape mode default
 }
 
 # Resize mode.
