--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -110,6 +110,7 @@ mode extra {
    bindsym Return move position center; mode default
    bindsym Escape mode default
    bindsym a exec --no-startup-id xrandr --output LVDS-1 --auto; mode default
+   bindsym d exec --no-startup-id xterm -name 'floating xterm' -geometry 74x28 -e 'dict "$(xsel)" | less'; mode default
 }
 
 bindsym $mod+w mode extra
