Update signal-cli package build submodule
Recently my very old version of signal-cli stopped working completely,
so I've updated it.  There are two new AUR dependencies [1][2], but
libmatthew-unix-java [3] is no longer required.  I had to run
`sudo archlinux-java set java-11-openjdk` for the signal-cli build to
succeed [4].

[1]: https://aur.archlinux.org/packages/libsignal-client/
[2]: https://aur.archlinux.org/packages/libzkgroup/
[3]: https://aur.archlinux.org/packages/libmatthew-unix-java/
[4]: https://wiki.archlinux.org/title/Java#Change_default_Java_environment

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,12 +49,15 @@
 [submodule "emacs.d/emacs-vim-modeline"]
 	path = home/emacs.d/emacs-vim-modeline
 	url = https://github.com/cinsk/emacs-vim-modeline
-[submodule "AUR/libmatthew-unix-java"]
-	path = misc/aur/libmatthew-unix-java
-	url = https://aur.archlinux.org/libmatthew-unix-java.git
 [submodule "AUR/signal-cli"]
 	path = misc/aur/signal-cli
 	url = https://aur.archlinux.org/signal-cli.git
+[submodule "misc/aur/libsignal-client"]
+	path = misc/aur/libsignal-client
+	url = https://aur.archlinux.org/libsignal-client.git
+[submodule "misc/aur/libzkgroup"]
+	path = misc/aur/libzkgroup
+	url = https://aur.archlinux.org/libzkgroup.git
 [submodule "signal-cli.bash"]
 	path = misc/signal-cli.bash
 	url = https://github.com/meribold/signal-cli.bash.git
