--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -161,6 +161,9 @@ for_window [instance="^floating xterm$"] floating enable
 for_window [instance="^funny xterm$"] floating enable
 for_window [instance="^funny xterm$"] move position mouse
 
+for_window [instance="^webcam feed$"] floating enable
+for_window [instance="^webcam feed$"] sticky enable
+
 # There appears to be no other property we could use...
 for_window [title="^Android Emulator - "] floating enable
 
