Add gcolor2 and gcolor3 to fzf-command-runner
Also use sticky floating windows for gcolor2 and gcolor3.

https://i3wm.org/docs/userguide.html#for_window
https://i3wm.org/docs/userguide.html#_sticky_floating_windows

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -158,6 +158,10 @@ assign [class="^firefoxdeveloperedition$"] 1
 for_window [instance="^vimsel$"] floating enable
 for_window [instance="^floating xterm$"] floating enable
 
+for_window [instance="^gcolor2$"] sticky enable
+for_window [instance="^gcolor3$"] sticky enable
+for_window [instance="^gcolor3$"] floating enable
+
 for_window [instance="^funny xterm$"] floating enable
 for_window [instance="^funny xterm$"] move position mouse
 
