Initial batch of changes for ThinkPad X13 Gen 2
I'm switching from my X220 to a new ThinkPad X13 Gen 2.  My unit has an
AMD Ryzen 7 PRO 5850U CPU and a display resolution of 2560 × 1600.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -109,7 +109,7 @@ mode extra {
    bindsym Shift+l move right
    bindsym Return move position center; mode default
    bindsym Escape mode default
-   bindsym a exec --no-startup-id xrandr --output LVDS-1 --auto; mode default
+   bindsym a exec --no-startup-id xrandr --output eDP-1 --auto; mode default
    bindsym d exec --no-startup-id xterm -name 'floating xterm' -geometry 74x28 -e 'dict "$(xsel)" | less'; mode default
 }
 
@@ -149,6 +149,8 @@ gaps outer -23
 # Disable all gaps whenever there's only one container on the current workspace.  This
 # should be redundant, though.
 smart_gaps on
+
+workspace 4 output DP-5 DP-6
 
 # Always start Firefox on workspace 1 so I can switch to another workspace while waiting
 # for it to start.  See <http://i3wm.org/docs/userguide.html#assign_workspace>.
