--- a/home/config/mpd/mpd.conf
+++ b/home/config/mpd/mpd.conf
@@ -19,7 +19,13 @@ input {
 
 audio_output {
    type "alsa"
-   name "alsa"
+   name "internal speakers"
+}
+
+audio_output {
+   type   "alsa"
+   device "default:CARD=Au"
+   name   "USB-C dock"
 }
 
 # Output for cli-visualizer.  Disabled when MPD is started.  Enable with `mpc enable 2` or
