--- a/home/config/mpd/mpd.conf
+++ b/home/config/mpd/mpd.conf
@@ -18,14 +18,8 @@ input {
 }
 
 audio_output {
-   type "alsa"
-   name "internal speakers"
-}
-
-audio_output {
-   type   "alsa"
-   device "default:CARD=Au"
-   name   "USB-C dock"
+   type "pipewire"
+   name "PipeWire"
 }
 
 # Output for cli-visualizer.  Disabled when MPD is started.  Enable with `mpc enable 2` or
