i3: don't center `floating man` windows
Position `floating man` windows on the right side of the screen.

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -203,6 +203,7 @@ for_window [instance="^ncmpcpp$"] sticky enable
 for_window [instance="^ncmpcpp$"] scratchpad show
 
 for_window [instance="^floating man$"] floating enable
+for_window [instance="^floating man$"] move right 640 px
 for_window [instance="^floating man$"] move scratchpad
 for_window [instance="^floating man$"] scratchpad show
 
