--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -35,12 +35,6 @@ bindsym $mod+l focus right
 
 bindsym $mod+t sticky toggle
 
-# Move focused window.
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
 # A vertical split in Vim is a horizontal split in i3.  I'm using vimish key bindings.
 bindsym $mod+s split v
 # FIXME: we use Super+V in `xbindkeysrc` to switch to or start Neovim, so we can't use it
@@ -66,6 +60,7 @@ bindsym $mod+d focus child
 
 # Make the currently focused window a scratchpad.
 bindsym $mod+Shift+grave move scratchpad
+bindsym $mod+period move scratchpad
 
 # Don't comply when programs request to be focused.  Firefox does that when I open an
 # article's associated URL in Newsboat, for example, and it's annoying.
